# Grade-Manager

./: .gitignore  CMakeLists.txt  README.md  note.md  系统需求.vsdx
GradeManager/: GradeManager.sln
GradeManager/Google-Test/: Google-Test.vcxproj  test.cpp
GradeManager/GradeManager/: GradeManager.vcxproj  GradeManager.vcxproj.filters  attribute_info.cpp  attribute_info.h  basic_info.h  concrete_id.cpp  concrete_info.cpp  content_type.h  course_id.h  course_info.h  course_type.h  data.cpp  data.h  enum.h  field.h  grade_id.h  grade_info.h  id_type.h  main.cpp  string_type.h  student_id.h  student_info.h  test.cpp  test.h  value_type.h
GradeManager/GradeManager/x64/Debug/: GradeManager.exe.recipe  GradeManager.ilk  vc143.idb
GradeManager/GradeManager/x64/Debug/GradeManager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GradeManager.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: change_data.h  const.h  info.h  saves_manager.h  search_info.h  ui.h  utility.h
src/: change_data.cpp  const.cpp  info.cpp  main.cpp  saves_manager.cpp  search_info.cpp  ui.cpp  utility.cpp
test/: 学生信息.txt  成绩信息.txt  课程信息.txt
visio/: UML.vsdx  增删.vsdx  排名.vsdx  查询.vsdx  统计.vsdx
